--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.9.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-alert-dialog": "^1.1.11",
@@ -24,6 +25,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
     "next": "14.2.28",
+    "next-auth": "^5.0.0-beta.27",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.56.1",
