--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
     "next": "14.2.28",
     "next-auth": "^5.0.0-beta.27",
+    "next-nprogress-bar": "^2.4.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.56.1",
