--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-scroll-area": "^1.2.6",
@@ -26,7 +27,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
     "next": "14.2.28",
-    "next-auth": "^5.0.0-beta.27",
+    "next-auth": "^5.0.0-beta.25",
     "next-nprogress-bar": "^2.4.7",
     "react": "^18",
     "react-dom": "^18",
