--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.503.0",
     "next": "14.2.28",
     "next-auth": "^5.0.0-beta.25",
@@ -40,6 +41,7 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
