--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.503.0",
+    "moment": "^2.30.1",
     "next": "14.2.28",
     "next-auth": "^5.0.0-beta.25",
     "next-nprogress-bar": "^2.4.7",
