--- a/package.json
+++ b/package.json
@@ -22,17 +22,15 @@
     "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
-    "@smastrom/react-rating": "^1.5.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide": "^0.503.0",
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.9",
+    "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-table": "^8.21.3",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
+    "lucide": "^0.503.0",
     "lucide-react": "^0.503.0",
     "moment": "^2.30.1",
     "next": "14.2.28",
@@ -44,6 +42,7 @@
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
+    "stripe": "^18.0.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.3"
