--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "lucide": "^0.503.0",
     "lucide-react": "^0.503.0",
@@ -37,9 +39,11 @@
     "next-auth": "^5.0.0-beta.25",
     "next-nprogress-bar": "^2.4.7",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
+    "react-phone-number-input": "^3.4.12",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "stripe": "^18.0.0",
