--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next": "14.2.28",
     "next-auth": "^5.0.0-beta.25",
     "next-nprogress-bar": "^2.4.7",
+    "nylas": "^7.9.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
