--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "js-cookie": "^3.0.5",
     "lucide": "^0.503.0",
     "lucide-react": "^0.503.0",
+    "luxon": "^3.6.1",
     "moment": "^2.30.1",
     "next": "14.2.28",
     "next-auth": "^5.0.0-beta.25",
@@ -63,6 +64,7 @@
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.74.7",
     "@types/js-cookie": "^3.0.6",
+    "@types/luxon": "^3.6.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
