--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "email": "email dev --dir src/email-templates"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.0",
@@ -29,6 +30,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.9",
+    "@react-email/components": "^0.0.37",
     "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-query": "^5.74.7",
     "@tanstack/react-table": "^8.21.3",
@@ -54,6 +56,7 @@
     "react-icons": "^5.5.0",
     "react-phone-number-input": "^3.4.12",
     "recharts": "^2.15.3",
+    "resend": "^4.5.0",
     "sonner": "^2.0.3",
     "stripe": "^18.0.0",
     "tailwind-merge": "^3.2.0",
@@ -72,6 +75,7 @@
     "eslint-config-next": "14.2.28",
     "postcss": "^8",
     "prisma": "^6.6.0",
+    "react-email": "4.0.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
