--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "moment": "^2.30.1",
     "next": "14.2.28",
     "next-auth": "^5.0.0-beta.25",
-    "next-nprogress-bar": "^2.4.7",
+    "nextjs-toploader": "^3.8.16",
     "nylas": "^7.9.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
