--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://monirbdcalling:a9QLZ72PDGv0eSvm@cluster0.gzvkjq4.mongodb.net/test"
+
+free_plan_id=68183cb81ba9897a815d627d
+pro_plan_id=68183ce51ba9897a815d627e
+elite_plan_id=68183d161ba9897a815d627f
