--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-query": "^5.74.7",
     "@tanstack/react-table": "^8.21.3",
+    "base-64": "^1.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -67,6 +68,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.74.7",
+    "@types/base-64": "^1.0.2",
     "@types/js-cookie": "^3.0.6",
     "@types/luxon": "^3.6.2",
     "@types/node": "^20",
