--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@auth/prisma-adapter": "^2.9.0",
     "@edgestore/react": "^0.3.3",
     "@edgestore/server": "^0.3.3",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "^1.2.8",
