added full deploy yml fix error

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,11 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            # go to the live folder
+            # ── 1) load nvm and activate Node 22 ─────────────────────────
+            export NVM_DIR="$HOME/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
+            nvm use 22
+            # ── 2) go to app folder and deploy ───────────────────────────
             cd /var/www/thefreelancepm || exit 1
             # pull latest code
             git pull origin main
