--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
     "postinstall": "prisma generate",
     "email": "email dev --dir src/email-templates"
   },
@@ -54,6 +55,7 @@
     "next-auth": "^5.0.0-beta.25",
     "nextjs-toploader": "^3.8.16",
     "react": "^18",
+    "react-calendly": "^4.4.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.56.1",
@@ -62,7 +64,6 @@
     "recharts": "^2.15.3",
     "resend": "^4.5.0",
     "sonner": "^2.0.3",
-    "stripe": "^18.0.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
@@ -71,18 +72,32 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.74.7",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/base-64": "^1.0.2",
+    "@types/jest": "^30.0.0",
     "@types/js-cookie": "^3.0.6",
     "@types/luxon": "^3.6.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/supertest": "^6.0.3",
+    "dotenv": "^16.5.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.28",
+    "jest": "^30.0.3",
+    "jest-environment-jsdom": "^30.0.2",
     "postcss": "^8",
     "prisma": "^6.6.0",
     "react-email": "4.0.11",
+    "stripe": "^18.2.1",
+    "supertest": "^7.1.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
+    "typescript": "^5",
+    "whatwg-fetch": "^3.6.20"
   }
 }
