--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 
- DATABASE_URL="mongodb+srv://monirbdcalling:a9QLZ72PDGv0eSvm@cluster0.gzvkjq4.mongodb.net/test"
+DATABASE_URL="mongodb+srv://monirbdcalling:a9QLZ72PDGv0eSvm@cluster0.gzvkjq4.mongodb.net/test"
+NEXT_PUBLIC_CALENDLY_CONSULT_URL=https://calendly.com/thefreelancepm/consultation
+NEXT_PUBLIC_CALENDLY_COACH_URL=https://calendly.com/thefreelancepm/coaching-session
