added coaching and calendly flow

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 
-DATABASE_URL="mongodb+srv://monirbdcalling:a9QLZ72PDGv0eSvm@cluster0.gzvkjq4.mongodb.net/test"
+DATABASE_URL="mongodb+srv://thefreelancepmclub:d9MOr3r16y6k60NN9@cluster0.girmhs3.mongodb.net/production?retryWrites=true&w=majority&appName=Cluster0"
 NEXT_PUBLIC_CALENDLY_CONSULT_URL=https://calendly.com/thefreelancepm/consultation
 NEXT_PUBLIC_CALENDLY_COACH_URL=https://calendly.com/thefreelancepm/coaching-session
