added coaching and calendly flow

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 
-DATABASE_URL="mongodb+srv://thefreelancepmclub:d9MOr3r16y6k60NN9@cluster0.g1rmhs3.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+DATABASE_URL="mongodb+srv://thefreelancepmclub:d9MOr3rl6y6k60N9@cluster0.g1rmhs3.mongodb.net/production?retryWrites=true&w=majority&appName=Cluster0"
 NEXT_PUBLIC_CALENDLY_CONSULT_URL=https://calendly.com/thefreelancepm/consultation
 NEXT_PUBLIC_CALENDLY_COACH_URL=https://calendly.com/thefreelancepm/coaching-session
