--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "eslint-config-next": "14.2.28",
     "jest": "^30.0.3",
     "jest-environment-jsdom": "^30.0.2",
+    "jest-mock-extended": "^4.0.0",
     "postcss": "^8",
     "prisma": "^6.6.0",
     "react-email": "4.0.11",
